--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.5",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
