--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "form-data": "^4.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
